--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
                                 <h2><span><span class="color-theme">Naomi Leo</span> </span><br>
                                     Registered Psychologist</h2>
                                 <p>Naomi has 10 years experience working in mental health with children, adolescents and adults.</p>
-                                <p> With a Bachelors Degree in Psychology from James Cook University, and currently studying a Masters of Family and Systemic Therapy through Australian Catholic University. Passionate about providing support to individuals with autism, anxiety, depression and complex trauma presentations. </p>
+                                <p>Naomi is passionate about providing support to individuals with autism, anxiety, depression and complex trauma. Naomi is a registered psychologist, having studied a Bachelor of Psychology at James Cook University.
+ </p>
                                <!-- <div class="about-contentbottom">
                                     <a href="about-us.html" class="tm-button">Read more</a>
                                     <a href="tel:+18009156270" class="tm-callbutton">
