remove old about us link

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                                 <div class="heroslider-content">
                                     <h1>Leo Therapy</h1>
                                     <p>Supporting individuals to manage life’s difficulties.</p>
-                                    <a href="about-us.html" class="tm-button">About
-                                        Us</a>
+                                    <<!--a href="about-us.html" class="tm-button">About
+                                        Us</a>-->
                                 </div>
                             </div>
                             <div class="col-lg-5 col-md-6 col-sm-8 col-12 order-1 order-md-2">
@@ -246,8 +246,8 @@
                                 <div class="heroslider-content">
                                     <h1>Leo Therapy</h1>
                                     <p>Offering supportive psychological services to individuals experiencing change, loss, and navigating life’s difficulties. With experience treating anxiety, depression and trauma, Naomi offers compassionate and confidential services that help to restore function and reduce shame.</p>
-                                    <a href="about-us.html" class="tm-button">About
-                                        Us</a>
+                                    <!--<a href="about-us.html" class="tm-button">About
+                                        Us</a>-->
                                 </div>
                             </div>
                         </div>
@@ -263,8 +263,8 @@
                                 <div class="heroslider-content">
                                     <h1>Leo Therapy</h1>
                                     <p>Naomi uses an integrative approach including Dialectical Behaviour Therapy (DBT), Acceptance and Commitment Therapy (ACT), Internal Family System Therapy (IFS), Schema Therapy and Somatic Experiencing techniques to increase a sense of safety, develop a tool kit of coping skills and process experiences to increase self-awareness and trust in your innate ability to heal.</p>
-                                    <a href="about-us.html" class="tm-button">About
-                                        Us</a>
+                                   <!-- <a href="about-us.html" class="tm-button">About
+                                        Us</a>-->
                                 </div>
                             </div>
                             <div class="col-lg-5 col-md-6 col-sm-8 col-12 order-1 order-md-2">
