--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                 <ul>
                                     <li>Email us : <a href="mailto://contact@leotherapy.com">contact@leotherapy.com</a></li>
                                     <li>Call us : <a href="tel://0413811184">0413 811 184</a></li>
+                                    <li>Fax : <a href="fax://+61740279470">(07) 4027 9470</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -203,7 +204,7 @@
                                 <div class="heroslider-content">
                                     <h1>Leo Therapy</h1>
                                     <p>Supporting individuals to manage life’s difficulties.</p>
-                                    <<!--a href="about-us.html" class="tm-button">About
+                                    <!--<a href="about-us.html" class="tm-button">About
                                         Us</a>-->
                                 </div>
                             </div>
@@ -1261,7 +1262,8 @@
                                 <h5 class="widget-title">Get In Touch</h5>
                                 <ul>
                                     <li><b>Address :</b>4/29 Louise Street Atherton</li>
-                                    <li><b>Phone :</b><a href="tel:+0413 811 184">0413 811 184</a></li>
+                                    <li><b>Phone :</b><a href="tel:0413 811 184">0413 811 184</a></li>
+                                    <li><b>Fax :</b><a href="tel:61740279470">(07) 4027 9470</a></li>
                                     <li><b>Email :</b><a href="mailto:contact@leotherapy.com">contact@leotherapy.com</a></li>
                                 </ul>
 								<!--
