--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <!-- Preloader -->
+    <!-- Preloader 
     <div class="tm-preloader">
         <svg width="300" height="300" viewBox="0 0 485 528" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M207.9,515.3H13V9h194.9c53.4,0,100.4,10.6,139.7,31.4c39.7,21.1,70.7,51.2,92,89.5
