--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="header-topinfo">
                                 <ul>
                                     <li>Email us : <a href="mailto://contact@leotherapy.com">contact@leotherapy.com</a></li>
-                                    <li>Call us : <a href="tel://0413811184">0413 811 184</a></li>
+                                    <li>Call us : <a href="tel://0740415180">(07) 4041 5180</a></li>
                                     <li>Fax : <a href="fax://+61740279470">(07) 4027 9470</a></li>
                                 </ul>
                             </div>
@@ -1065,7 +1065,7 @@
                                     <h5>Contact Details</h5>
                                     <ul>
                                         <li><b>Address </b>4/29 Louise Street Atherton</li>
-                                        <li><b>Phone </b>0413 811 184</li>
+                                        <li><b>Phone </b>(07) 4041 5180</li>
                                         <li><b>Email </b>contact@leotherapy.com <br></li>
                                     </ul>
                                 </div>
@@ -1262,7 +1262,7 @@
                                 <h5 class="widget-title">Get In Touch</h5>
                                 <ul>
                                     <li><b>Address :</b>4/29 Louise Street Atherton</li>
-                                    <li><b>Phone :</b><a href="tel:0413 811 184">0413 811 184</a></li>
+                                    <li><b>Phone :</b><a href="tel:(07) 4041 5180">(07) 4041 5180</a></li>
                                     <li><b>Fax :</b><a href="tel:61740279470">(07) 4027 9470</a></li>
                                     <li><b>Email :</b><a href="mailto:contact@leotherapy.com">contact@leotherapy.com</a></li>
                                 </ul>
