added profile picture

--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
                                 <h2><span><span class="color-theme">Naomi Leo</span> </span><br>
                                     Registered Psychologist</h2>
                                 <p>Naomi has 10 years experience working in mental health with children, adolescents and adults.</p>
+								<img src="assets/images/team/profile.png" alt="dialia logo">
                                 <p>Naomi is passionate about providing support to individuals with autism, anxiety, depression and complex trauma. Naomi is a registered psychologist, having studied a Bachelor of Psychology at James Cook University.
  </p>
                                <!-- <div class="about-contentbottom">
